# NetPrism

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  netprism.sh  nornir_config.yaml  poetry.toml  pyproject.toml
netprism/: __init__.py  main.py  napalm_traceroute.py
netprism/custom_napalm/: srlinux.py  sros.py
netprism/templates/srlinux/: assign_int_to_ni.j2  create_mac_vrf.j2  create_user.j2
netprism/templates/sros/: assign_int_to_ni.j2  create_user.j2  create_vpls.j2
tests/: conftest.py  netprism.clab.yaml  test_filters.py  test_sysinfo.py  test_tests.py
